<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="imp">importr</string>
    <string name="gallery">gall</string>
    <string name="slideshow">slid</string>
    <string name="tools">tool</string>
    <string name="nav_header_desc">image</string>
    <string name="nav_header_title">fad.e-formation.tn</string>
    <string name="nav_header_subtitle">Platform EAD</string>
    <string name="communicate">Communicate</string>
    <string name="share">share</string>
    <string name="send">send</string>

</resources>
